trying to fix mobile cutoff v3

--- a/styles.css
+++ b/styles.css
@@ -545,8 +545,6 @@ html, body { /*done*/
     .middleBar {
         margin: 0;
         padding: 0;
-        margin-bottom: 75px;
-        margin-top: 75px;
         border-radius: 0;
         height: calc(100vh - 75px); 
     }
